styles.css
/* ... */
.card:hover {
  transform: translateY(-0.5rem) scale(1.0125);
  box-shadow: 0 0.5em 3rem -1rem rgba(0, 0, 0, 0.5);
}

.card-description {
  display: block;
  padding: 1em 0.5em;
  color: #515151;
  text-decoration: none;
}

.card-description > h2 {
  margin: 0 0 0.5em;
}

.card-description > p {
  margin: 0;
}
main {
  padding: 5rem 0;
  margin-bottom: 50px;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer img {
  margin-left: 0.5rem;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

footer {
  position: fixed;
  background-color: #d3bcc0ff;
  z-index: 99999;
  bottom: 0;
  width: 100%;
  height: 25px;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

@media (max-width: 768px) {
  footer {
    height: 1rem;
  }
  footer p{
    font-size: 8px !important;
    font-weight: bolder;
  }
  header {
    position: fixed !important;
    height:80px !important;
    width: 80px !important;
    padding-left: 0px !important;
  }
  header img{
    height: 80px !important;
  }
  .card-list {
    margin-top: 0px !important;
  }
  .SideMenuContainer {
    position: fixed;
    left: 0;
    top: 80px !important;
  }
  #about-container {
    margin-top: 0px !important;
  }
}
@media only screen and (min-width: 1436px) {
  .card-list {
    max-width: 1200px;
    margin-top: 300px;
  }
  .right {
    position: absolute;
    right: 0px;
    padding: 10px;
  }
  .left {
    position: absolute;
    left: 0px;
    width: 300px;
    padding: 10px;
  }
}

@media only screen and (max-width: 1436px) {
  .headerText {
    display: none;
    position: fixed;
    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
    color: #0e103dff;
    text-align: center;
  }



  header {
    top: 0;
    width: 100%;
    height: 240px;
    text-align: center;
    display: flex;
    background-color: #d3bcc0ff;
    justify-content: left;
    align-items: left;
    z-index: 9999;
  }
  .card-list {
    display: block;
    padding: 0;
    margin-top: 300px;
    font-size: 0;
    text-align: center;
    list-style: none;
    z-index: 999;
    margin-bottom: 100px;
  }
  .card {
    width: 65%;
  }
}

.headerText {
  position: absolute;
  top: 50%;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
  color: #0e103dff;
  width: 30%; 
  margin-left: auto;
  margin-right: auto;
}

header {
  position: absolute;
  top: 0;
  width: 100%;
  height: 240px;
  display: flex;
  background-color: #d3bcc0ff;
  justify-content: left;
  align-items: left;
  z-index: 9999;
  padding-left:80px;
}

h1,
h2 {
  margin-bottom: 0px;
  font-family: Liberation Mono, Monaco, Courier New, monospace;
  color: purple;
}
h3,
h4 {
  margin-bottom: 0px;
  font-family: Liberation Mono, Monaco, Courier New, monospace;
  color: #0e103dff;
}

/* styles for datepicker */
:root {
  --Primary: #fdfbfd;
  --Secondary: #e6e8eb;
  --Shadow: #333333;
  --Selection: #163348;
  --Accent: #3362b6;
  --Trouble: #d72027;
}

.SideMenuContainer {
  position: fixed;
  left: 0;
  top: 0px;
  height: 100%;
  z-index: 999999;
}
.parent-datepicker-container {
  margin: 20px 5px 100px 85px;
}

.DatepickerContainer {
  margin-top: 100px;
  margin-bottom: 100px;
  margin-left: 10%;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: bold;
}

.DatepickerContainer > .grid-container {
  background-color: var(--Secondary);
}

.DatepickerContainer .monthHeader,
.DatepickerContainer .yearHeader {
  background-color: var(--Primary);
  color: var(--Accent);
  text-align: center;
  align-items: center;
  display: inline-block;
}

.datepicker-month-select,
.datepicker-year-input {
  outline: none !important;
  border-style: none !important;
  background-color: var(--Primary) !important;
  color: var(--Accent) !important;
  padding: 0 !important;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
  font-size: 1.15rem !important;
  font-weight: bold !important;
  align-items: center !important;
  justify-content: center !important;
  display: flex !important;
  vertical-align: middle !important;
}

.datepicker-month-select {
  margin-left: 12px !important;
  -moz-appearance: none;
  -webkit-appearance: none;
}

.monthHeader > select {
  background: var(--Secondary) !important;
  background-image: none !important;
  border: none !important;
  background-color: var(--Primary) !important;
  padding: 0px !important;
  clear: both;
  text-align: center;
  width: 108px !important;
}

.yearHeader > input[type='number'] {
  background: var(--Secondary) !important;
  background-image: none !important;
  border: none !important;
  background-color: var(--Primary) !important;
  width: 70px !important;
  padding: 0;
  clear: both;
  text-align: center;
  -moz-appearance: none;
  -webkit-appearance: none;
  padding: 0px !important;
}

.datepicker-month-select:hover,
.increase-year-button:hover,
.decrease-year-button:hover {
  cursor: pointer;
}

.decrease-year-button,
.increase-year-button {
  margin: 0;
  color: var(--Accent) !important;
  font-size: 24px !important;
}

.datepicker-month-select > option {
  border-style: none !important;
  -webkit-appearance: none !important;
  outline: none !important;
  background-color: var(--Primary) !important;
  color: var(--Accent) !important;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
  font-weight: bold !important;
  align-items: center !important;
  justify-content: center !important;
  display: flex !important;
  vertical-align: middle !important;
}
/* ... */

